fixed the out of boundaries dive

--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,8 @@ margin: auto;
     flex-direction: column;
     align-items: center ;
     background: #F5F5F5;
-    width: 100%;
-    height: 8vh;
+    /* width: 100%; */
+    height: 12vh;
     padding: 8px;
     color:#161515;;
 }
